Bug 556886 - Disable C4275 only inside stl_wrappers. r=ehsan